@@ -24,9 +24,9 @@ function list_skills(unit, learned_only)
                     u_skill={rating=-1,experience=0}
                 end
                 local rating
-                if u_skill.rating >15 then
-                    local legendary_bonus= u_skill.rating - 15
-                    rating=df.skill_rating.attrs[15]
+                if u_skill.rating > df.skill_rating.Legendary then
+                    local legendary_bonus= u_skill.rating - df.skill_rating.Legendary
+                    rating=df.skill_rating.attrs[df.skill_rating.Legendary]
                     rating={ xp_threshold=rating.xp_threshold, caption=rating.caption }
                     rating.xp_threshold= rating.xp_threshold + legendary_bonus * 100
                     rating.caption = rating.caption.."+"..legendary_bonus
